# coldfront_ecs_plugin

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
src/coldfront_ecs_plugin/: __init__.py  apps.py  signals.py  utils.py
src/coldfront_ecs_plugin/management/commands/: ecs_setup.py  ecs_sync.py
src/coldfront_ecs_plugin/tests/: test_signals.py  test_utils.py
