[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coldfront-ecs-plugin"
version = "0.1.0"
description = "Standalone ECS plugin for ColdFront"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-ecsclient",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["coldfront_ecs_plugin*"]
